--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+
+/* Include the padding and border in an element's total width and height */
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  min-width: 250px;
+  max-width: 600px;
+  margin: auto;
+  margin-top: 50px;
+}
+body{
+  background-color:chartreuse;
+}
+
+
+@media screen and (max-width:765px){
+  .container {
+    min-width: 300px;
+    max-width: 360px;
+    margin: auto;
+    margin-top: 30px;
+  }
+  
 }
